# Teaching-ism-2023

Lecture1/test/: Emilija_Gladkytė_test.md  Emilis_Palenskis_test1.md  Gabriele_Misius_Test1.md  Greta_Jasinskaite_test1.md  Hubert_Jarmal.md  Ina Staneviciute_test1.md  Jevgenij_Gamper_Test1.md  Kamilė_Eizaitė_test1.md  Kipras_Nomeika_test1.md  Konrad_Karol_Vujcik_Test1.md  Laura_Mažeikaitė_Test1.md  Laurynas_Sinkevicius_Test1.md  Margiris_Upskus_test1.md  Mateo_Larrea_Test1.md  Meda_Kvietinskaite_test1.md  Nojus_Naraškevičius_test1.md  Paulius_Vidutis_test.md  Rugile_Vaskyte_test.md  Ugne_Silinskaite_Test1.md  emilija_grismanauskaite_test1.md  karla_mora_test1.md  nojus_jarmala_test1.md  ugnius_prusevicius_test1.md
Lecture2/: 02_linear_regression.ipynb
Teaching-ism-2023-main/: pyproject.toml
Teaching-ism-2023-main/Lecture1/: gpt.ipynb
Teaching-ism-2023-main/Lecture1/test/: Skalve_Krizanauskaite_test.md
