[tool.poetry]
name = "teaching-ism"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
